# CrossSCP

./: .gitignore  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml
lib/: app_info.dart  main.dart
lib/ffi/: scp_bindings.dart  scp_client.dart  scp_error.dart  scp_isolate.dart
lib/l10n/: app_localizations.dart
lib/models/: scp_models.dart
lib/services/: connection_service.dart  transfer_service.dart
lib/ui/screens/: home_screen.dart
lib/ui/widgets/: file_browser.dart  site_list.dart  transfer_queue.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
native/: CMakeLists.txt  test_connect.c
native/build_scripts/: build_android.sh  build_desktop.sh  build_ios.sh
native/include/crossscp/: scp_api.h  scp_error.h  scp_logger.h  scp_types.h
native/src/: connection_pool.cpp  connection_pool.h  logger.cpp  memory_guard.h  scp_core.cpp  sftp_session.cpp  sftp_session.h  sftp_transfer.cpp  sftp_transfer.h  ssh_connection.cpp  ssh_connection.h
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
